Fix Book Layout text centering on mobile

--- a/styles/index.css
+++ b/styles/index.css
@@ -187,7 +187,13 @@ img {
 	justify-content: space-between;
 }
 
-.photography, .logos-trademarks {
+.portfolio-grid {
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: space-between;
+}
+
+.photography, .logos-trademarks, .book-layout {
 	text-align: center;
 }
 
@@ -345,7 +351,7 @@ a.artwork {
 	main {
 		padding: 0 1rem;
 	}
-	.portfolio a {
+	.portfolio-grid a {
 		width: 100%;
 	}
 }
@@ -364,7 +370,7 @@ a.artwork {
 	nav {
 		max-width: 300px;
 	}
-	nav, .portfolio, .about {
+	nav, .portfolio, .portfolio-grid, .about {
 		flex-direction: column;
 	}
 	.about-item {
